Remove the need for a custom Rust toolchain on x86_64 :)
We have long wanted to remove the requirement on the custom Rust toolchain,
because while it was a cool idea, we're never going to be able to upstream
it apparently, and it's a pain to maintain.

Instead, we're going to use an external `std` library and various big-brain
solutions to make it ergonomic to use. The first is a cool way to provide
a linker script, which I'm particularly happy with.

--- a/user/simple_fb/Cargo.toml
+++ b/user/simple_fb/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+std = { path = "../../lib/std" }
 poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
 linked_list_allocator = "0.10.2"
 log = "0.4"
