--- a/Poplar.toml
+++ b/Poplar.toml
@@ -1,4 +1,8 @@
-arch = "riscv"
-# Whether to build for a release (true) or `debug` (false) profile. The `release` profile is heavily recommended
-# for software-emulated targets (e.g. RiscV on an x86_64 host) to achieve reasonable speeds.
+platform = "x64"
+
+[x64]
+release = false
+
+[riscv]
+# The release profile is heavily recommended for software-emulated targets to achieve reasonable speeds
 release = true
