--- a/seed/seed_uefi/Cargo.toml
+++ b/seed/seed_uefi/Cargo.toml
@@ -10,7 +10,7 @@ hal = { path = "../../lib/hal" }
 hal_x86_64 = { path = "../../lib/hal_x86_64" }
 log = "0.4"
 spin = "0.9.2"
-uefi = "0.24.0"
+uefi = { version = "0.24.0", features = ["alloc", "global_allocator"] }
 mer = { path = "../../lib/mer" }
 gfxconsole = { path = "../../lib/gfxconsole" }
 poplar_util = { path = "../../lib/poplar_util" }
