`user/echo`: convert `echo` to use external `std`
This one was particularly easy, because it actually built against our
in-tree target for a while.

--- a/user/echo/Cargo.toml
+++ b/user/echo/Cargo.toml
@@ -2,8 +2,8 @@
 name = "echo"
 version = "0.1.0"
 authors = ["Isaac Woods"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
+std = { path = "../../lib/std" }
 log = "0.4"
