--- a/user/platform_bus/Cargo.toml
+++ b/user/platform_bus/Cargo.toml
@@ -2,7 +2,7 @@
 name = "platform_bus"
 version = "0.1.0"
 authors = ["Isaac Woods"]
-edition = "2018"
+edition = "2021"
 
 [lib]
 name = "platform_bus"
@@ -13,7 +13,6 @@ name = "platform_bus"
 path = "src/main.rs"
 
 [dependencies]
-poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
-linked_list_allocator = "0.10.2"
+std = { path = "../../lib/std" }
 log = "0.4"
 ptah = { path = "../../lib/ptah" }
