--- a/user/usb_bus_xhci/Cargo.toml
+++ b/user/usb_bus_xhci/Cargo.toml
@@ -2,11 +2,10 @@
 name = "usb_bus_xhci"
 version = "0.1.0"
 authors = ["Isaac Woods"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
-linked_list_allocator = "0.10.2"
+std = { path = "../../lib/std" }
 log = "0.4"
 platform_bus = { path = "../platform_bus" }
 ptah = { path = "../../lib/ptah" }
