--- a/lib/hal_x86_64/Cargo.toml
+++ b/lib/hal_x86_64/Cargo.toml
@@ -10,7 +10,7 @@ bitflags = "1"
 bit_field = "0.10"
 spin = "0.9.2"
 poplar_util = { path = "../poplar_util" }
-log = { version = "0.4", default-features = false }
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 
 [features]
 default_features = []
