Add some remnant changes from debugging scheduler crash
We tried to track down the godforsaken scheduling bug on x86_64 (and failed),
but made some useful/harmless changes along the way.

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -3,7 +3,11 @@ platform = "x64"
 [x64]
 release = false
 user_tasks = [
-    "simple_fb user/simple_fb"
+    "platform_bus user/platform_bus",
+    "pci_bus user/pci_bus",
+    "usb_bus_xhci user/usb_bus_xhci",
+    "simple_fb user/simple_fb",
+    "echo user/echo",
 ]
 
 [riscv]
