`seed_riscv`: hack together enough stuff to read a GPT header from a device!
This is pretty cool, and not as hard as I thought. There's lots left to be
able to nicely read multiple sectors and

--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -20,3 +20,4 @@ arrayvec = { version = "0.7.2", default-features = false }
 mer = { path = "../../lib/mer/" }
 pci_types = { path = "../../lib/pci_types" }
 virtio = { path = "../../lib/virtio" }
+gpt = { path = "../../lib/gpt" }
