`xtask`,`opensbi`: add `opensbi` submodule and `xtask` command to build it
We had this in-tree a while ago and got rid of it because QEMU ships with
its own version. However, now we're building for hardware, we need a way
to supply it, and it seems sensible to have a nice `xtask` command to build
it. In the future this can be extended to know how to build OpenSBI for
each platform.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/pci_types"]
 	path = lib/pci_types
 	url = git@github.com:rust-osdev/pci_types
+[submodule "bundled/opensbi"]
+	path = bundled/opensbi
+	url = https://github.com/riscv-software-src/opensbi
