`xtask`: separate out `rv64_virt` and `mq_pro` platforms
These are both RISC-V platforms, obviously, but actually need relatively
different build infra. For now, we're just completely severing the relation
between them, but I imagine in the future we can reconnect similar platforms
that'll have shared components.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         include:
           - PLATFORM: x64
-          - PLATFORM: riscv
+          - PLATFORM: rv64_virt
 
     runs-on: ubuntu-latest
 
