--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libudev-dev
       
     - name: Install Rust
       uses: actions-rs/toolchain@v1
