--- a/tools/xtask/Cargo.toml
+++ b/tools/xtask/Cargo.toml
@@ -15,3 +15,4 @@ fscommon = "0.1.1"
 serde = { version = "1.0.152", features = ["derive"] }
 toml = "0.7.2"
 colored = "2.0.4"
+serialport = "4.2.2"
