Provide memory layout and other constants through `hal_riscv::platform` module
I'm not sure if this will turn out to be the right solution in the long-term,
but for now seems alright. We effectively need to change various things,
such as the layout of the physical and memory address spaces, and the paging
scheme to use, depending on the platform we're building for. This happens
by setting a feature in the built crate, which is then passed along to
`hal_riscv`, which then re-exports the correct module as `hal_riscv::platform`.

--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -14,3 +14,7 @@ tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features =
 spinning_top = { version = "0.2.4", features = ["nightly"] }
 poplar_util = { path = "../../lib/poplar_util/" }
 fdt = { git = "https://github.com/repnop/fdt" }
+
+[features]
+platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
+platform_mq_pro = ["hal_riscv/platform_mq_pro"]
