--- a/lib/hal_riscv/Cargo.toml
+++ b/lib/hal_riscv/Cargo.toml
@@ -11,3 +11,8 @@ bitflags = "1.3.2"
 bit_field = "0.10.1"
 poplar_util = { path = "../poplar_util" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+cfg-if = "1.0"
+
+[features]
+platform_rv64_virt = []
+platform_mq_pro = []
