`xtask`,`seed_riscv`: load user tasks from the ramdisk

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -13,6 +13,9 @@ user_tasks = [
 [rv64_virt]
 # The release profile is heavily recommended for software-emulated targets to achieve reasonable speeds
 release = true
+user_tasks = [
+    "hello_world user/hello_world",
+]
 
 [mq_pro]
 release = true
