--- a/lib/hal_x86_64/Cargo.toml
+++ b/lib/hal_x86_64/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 hal = { path = "../hal" }
 bitflags = "1"
 bit_field = "0.10"
-spin = "0.9.2"
+spinning_top = "0.3.0"
 poplar_util = { path = "../poplar_util" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 
