--- a/Poplar.toml
+++ b/Poplar.toml
@@ -16,6 +16,7 @@ release = true
 user_tasks = [
     "hello_world user/hello_world",
     "platform_bus user/platform_bus",
+    "pci_bus user/pci_bus",
 ]
 
 [mq_pro]
