--- a/Poplar.toml
+++ b/Poplar.toml
@@ -17,6 +17,7 @@ user_tasks = [
     "hello_world user/hello_world",
     "platform_bus user/platform_bus",
     "pci_bus user/pci_bus",
+    "usb_bus_ehci user/usb_bus_ehci",
 ]
 
 [mq_pro]
