--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -12,8 +12,7 @@ poplar_util = { path = "../../lib/poplar_util/" }
 volatile = { path = "../../lib/volatile" }
 spinning_top = { version = "0.2.4", features = ["nightly"] }
 bit_field = "0.10.1"
-# Using upstream as it fixes `chosen` behaviour. When released, move back.
-fdt = { git = "https://github.com/repnop/fdt", features = ["pretty-printing"] }
+fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 linked_list_allocator = "0.10.5"
