--- a/user/usb_bus_ehci/Cargo.toml
+++ b/user/usb_bus_ehci/Cargo.toml
@@ -10,4 +10,5 @@ log = "0.4"
 platform_bus = { path = "../platform_bus" }
 ptah = { path = "../../lib/ptah" }
 bit_field = "0.10"
+bitflags = "2.4.1"
 poplar_util = { path = "../../lib/poplar_util" }
