--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -16,6 +16,7 @@ poplar_util = { path = "../../lib/poplar_util/" }
 fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
 sbi = "0.2.0"
 pci_types = { path = "../../lib/pci_types/" }
+bipqueue = {path = "../../lib/bipqueue/" }
 
 [features]
 platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
