`kernel`,`kernel_riscv`: add basic support for `maitake`-driven async!!
This is pretty cool. It will need some clean-up, but seems to fundamentally
allow us to run async tasks inside the kernel alongside normal userspace-
scheduled real tasks.

Also silence high-verbosity messages from `tracing`, as `maitake` does seem
to log heavily. We'll probably want higher-precision filtering at some point.
Next step is probably to work on some cool async-compatible channels so
kernel tasklets (I think this is what we're calling them) can talk to each
other and drive stuff etc.

--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -17,6 +17,7 @@ fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
 sbi = "0.2.0"
 pci_types = { path = "../../lib/pci_types/" }
 bipqueue = {path = "../../lib/bipqueue/" }
+maitake = { git = "https://github.com/hawkw/mycelium", features = ["alloc", "tracing-02"] }
 
 [features]
 platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
