`kernel`: provide an async-enabled SPSC queue for kernel tasklets
This was actually surprisingly simple (read: all the complicated bits are
done by `maitake`). Will need a rework of `bipqueue` to support dynamically
allocated storage.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -17,6 +17,7 @@ pci_types = { path = "../lib/pci_types" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 spinning_top = "0.3.0"
 maitake = { git = "https://github.com/hawkw/mycelium", features = ["alloc", "tracing-02"] }
+bipqueue = { path = "../lib/bipqueue/" }
 
 [workspace]
 members = ["kernel_x86_64", "kernel_riscv"]
