`poplar`: create `DmaPool` abstraction in new `poplar::ddk` module
This creates a Driver Development Kit (DDK) module and associated feature
in the `poplar` library that will hold userspace abstractions that are only/
mostly useful for drivers. This pulls in `linked_list_allocator`, and probably
a bunch of other stuff in the future, so it's useful to have it feature-gated.

The first abstraction in the DDK is a little `DmaPool` and `DmaObject` etc.
system for dynamically managing memory that needs to be addressed physically.
This has already proven useful in our EHCI driver.

The `ddk` module can be re-exported from our custom `std` too for easier
use.

--- a/lib/poplar/Cargo.toml
+++ b/lib/poplar/Cargo.toml
@@ -13,8 +13,10 @@ cfg-if = "0.1"
 log = { version = "0.4", optional = true }
 pci_types = { path = "../pci_types", optional = true }
 ptah = { path = "../ptah", optional = true, default-features = false }
+linked_list_allocator = { version = "0.10.5", optional = true, features = ["alloc_ref"] }
 
 [features]
 default = ["can_alloc", "pci"]
 can_alloc = ["log", "ptah", "ptah/alloc", "ptah/derive"]
 pci = ["pci_types"]
+ddk = ["pci", "linked_list_allocator"]
