--- a/lib/std/Cargo.toml
+++ b/lib/std/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 [dependencies]
 poplar = { path = "../poplar" }
 linked_list_allocator = "0.10.5"
+
+[features]
+ddk = ["poplar/ddk"]
