`usb_hid`: add start of very basic USB HID driver
This is the start of a driver for USB HID-class devices. It can detect devices
it can potentially support from the Platform Bus, and then interrogate
their configuration hierachies for HID-class interfaces. Also includes some
definitions for HID descriptors for the future.

Next steps will be actually parsing the HID descriptors (including the Report
descriptors, which look potentially complex), and then working on Interrupt
endpoints to be able to get data from a HID device! I think it would be worth
getting some of the other parts of this infrastructure, including userspace
interrupt delegation and potentially userspace async runtimes, working before
we tackle this.

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -18,6 +18,7 @@ user_tasks = [
     "platform_bus user/platform_bus",
     "pci_bus user/pci_bus",
     "usb_bus_ehci user/usb_bus_ehci",
+    "usb_hid user/usb_hid",
 ]
 
 [mq_pro]
