--- a/Poplar.toml
+++ b/Poplar.toml
@@ -5,7 +5,7 @@ release = false
 user_tasks = [
     "platform_bus user/platform_bus",
     "pci_bus user/pci_bus",
-    "usb_bus_xhci user/usb_bus_xhci",
+    # "usb_bus_xhci user/usb_bus_xhci",
     "simple_fb user/simple_fb",
     "echo user/echo",
 ]
