--- a/user/platform_bus/Cargo.toml
+++ b/user/platform_bus/Cargo.toml
@@ -13,6 +13,7 @@ name = "platform_bus"
 path = "src/main.rs"
 
 [dependencies]
-std = { path = "../../lib/std" }
+std = { path = "../../lib/std", features = ["async"] }
 log = "0.4"
 ptah = { path = "../../lib/ptah" }
+spinning_top = "0.3.0"
