`hal_riscv`: fix platform feature selection for `hal` on RISC-V
Turns out we weren't actually selecting the correct platform features for
`hal` anywhere, which was leading to weird canonicalisation bugs. I don't
think this actually affected anything, because we didn't seem to rely on
the auto-canonicalisation logic anywhere, but still worth fixing.

--- a/lib/hal_riscv/Cargo.toml
+++ b/lib/hal_riscv/Cargo.toml
@@ -14,5 +14,5 @@ tracing = { git = "https://github.com/tokio-rs/tracing", default-features = fals
 cfg-if = "1.0"
 
 [features]
-platform_rv64_virt = []
-platform_mq_pro = []
+platform_rv64_virt = ["hal/platform_rv64_virt"]
+platform_mq_pro = ["hal/platform_mq_pro"]
