`usb_bus_ehci`: separate out `Controller` into a separate file
Also includes some changes to how we handle queues and some boilerplate
for device management because we forgot to commit that before doing the
big file move.

--- a/user/usb_bus_ehci/Cargo.toml
+++ b/user/usb_bus_ehci/Cargo.toml
@@ -14,3 +14,4 @@ mycelium-bitfield = "0.1.4"
 bitflags = "2.4.1"
 poplar_util = { path = "../../lib/poplar_util" }
 usb = { path = "../../lib/usb" }
+spinning_top = "0.3.0"
