`usb`,`usb_hid`: parse report descriptor and interpret HID reports
This is the last step in being able to get sensible output from a USB
keyboard!

--- a/lib/usb/Cargo.toml
+++ b/lib/usb/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 bit_field = "0.10.2"
 mycelium-bitfield = "0.1.5"
 ptah = { path = "../ptah/", features = ["derive"] }
+log = "0.4"
