user/virtio_gpu: start a hacky Virtio GPU driver
This drives a Virtio GPU device enough to draw a framebuffer in guest memory
to the display! Various parts are still pretty hacky so we'll need various
bits of infrastructure in the PCI system to clean things up, but we should
be able to get a basic graphical shell working with this!

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -19,6 +19,7 @@ user_tasks = [
     "pci_bus user/pci_bus",
     "usb_bus_ehci user/usb_bus_ehci",
     "usb_hid user/usb_hid",
+    "virtio_gpu user/virtio_gpu",
 ]
 
 [mq_pro]
