`fb_console`: start graphical console for userspace!

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -20,6 +20,7 @@ user_tasks = [
     "usb_bus_ehci user/usb_bus_ehci",
     "usb_hid user/usb_hid",
     "virtio_gpu user/virtio_gpu",
+    "fb_console user/fb_console",
 ]
 
 [mq_pro]
