--- a/ginkgo/Cargo.toml
+++ b/ginkgo/Cargo.toml
@@ -7,3 +7,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+std = { path = "../lib/std", optional = true }
+
+[features]
+poplar = ["std"]
