`poplar`: move PCI types using `pci_types` into DDK
This removes the dependency on `pci_types` from the vast majority of
`poplar`-users, which is nice.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,7 +12,7 @@ cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.10"
 linked_list_allocator = "0.10.5"
-poplar = { path = "../lib/poplar" }
+poplar = { path = "../lib/poplar", features = ["ddk"] }
 ptah = { path = "../lib/ptah" }
 pci_types = { path = "../lib/pci_types" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
