`seed_riscv`: load desired user tasks from config

--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -22,6 +22,8 @@ pci_types = { path = "../../lib/pci_types" }
 virtio = { path = "../../lib/virtio" }
 gpt = { path = "../../lib/gpt" }
 heapless = "0.8.0"
+serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
+picotoml = { path = "../../lib/picotoml" }
 
 [features]
 platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
