--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 hal = { path = "../lib/hal" }
 heapless = "0.8.0"
+serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 
 [workspace]
 members = ["seed_uefi", "seed_riscv", "d1_boot0"]
