--- a/user/platform_bus/Cargo.toml
+++ b/user/platform_bus/Cargo.toml
@@ -13,7 +13,8 @@ name = "platform_bus"
 path = "src/main.rs"
 
 [dependencies]
-std = { path = "../../lib/std", features = ["async"] }
+std = { path = "../../lib/std", features = ["async", "ddk"] }
 log = "0.4"
 ptah = { path = "../../lib/ptah" }
 spinning_top = "0.3.0"
+pci_types = { path = "../../lib/pci_types" }
