--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -12,7 +12,7 @@ seed = { path = "../../seed" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 spinning_top = { version = "0.2.4", features = ["nightly"] }
-poplar_util = { path = "../../lib/poplar_util/" }
+mulch = { path = "../../lib/mulch/" }
 bit_field = "0.10.2"
 fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
 sbi = "0.2.0"
