--- a/lib/hal_riscv/Cargo.toml
+++ b/lib/hal_riscv/Cargo.toml
@@ -9,7 +9,7 @@ hal = { path = "../hal" }
 volatile = { path = "../volatile" }
 bitflags = "1.3.2"
 bit_field = "0.10.1"
-poplar_util = { path = "../poplar_util" }
+mulch = { path = "../mulch" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 cfg-if = "1.0"
 
