--- a/seed/seed_uefi/Cargo.toml
+++ b/seed/seed_uefi/Cargo.toml
@@ -13,7 +13,7 @@ spinning_top = "0.3.0"
 uefi = { version = "0.24.0", features = ["alloc", "global_allocator"] }
 mer = { path = "../../lib/mer" }
 gfxconsole = { path = "../../lib/gfxconsole" }
-poplar_util = { path = "../../lib/poplar_util" }
+mulch = { path = "../../lib/mulch" }
 heapless = "0.8.0"
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 picotoml = { path = "../../lib/picotoml" }
