Build some userspace tasks on the D1
Only having `hello_world` seems to actually work :) but adding `platform_bus`
makes it hang(?) before entering userspace :(

I feel real RISC-V hardware might be a can of worms I regret opening lmao.

--- a/Poplar.toml
+++ b/Poplar.toml
@@ -23,6 +23,10 @@ user_tasks = [
 
 [mq_pro]
 release = true
+user_tasks = [
+    "hello_world user/hello_world",
+    "platform_bus user/platform_bus",
+]
 
 [uconsole]
 release = true
