`lib/picotoml`: clean up a little bit

--- a/lib/picotoml/Cargo.toml
+++ b/lib/picotoml/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "picotoml"
 version = "0.1.0"
+description = "A `no_std` TOML deserializer build for embedded systems. Can be used without an allocator"
 authors = ["Isaac Woods"]
+license = "MIT/Apache-2.0"
 edition = "2021"
 
 [dependencies]
