--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/IsaacWoods/acpi
 [submodule "lib/pci_types"]
 	path = lib/pci_types
-	url = git@github.com:rust-osdev/pci_types
+	url = https://github.com/rust-osdev/pci_types
 [submodule "bundled/opensbi"]
 	path = bundled/opensbi
 	url = https://github.com/riscv-software-src/opensbi
