--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "usb_bus_ehci",
     "usb_hid",
     "virtio_gpu",
-    "fb_console",
+    "fb_console", "service_host",
 ]
 resolver = "2"
 
