`kernel`: add `create_address_space` system call
This required reworking how the kernel page tables are accessed from the
common kernel.

--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -11,7 +11,7 @@ kernel = { path = "../" }
 seed = { path = "../../seed" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
-spinning_top = { version = "0.2.4", features = ["nightly"] }
+spinning_top = { version = "0.3" }
 mulch = { path = "../../lib/mulch/" }
 bit_field = "0.10.2"
 fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
