`kernel`,`service_host`: move service discovery to userspace!
* Remove `register_service` and `subscribe_to_service` syscalls + helpers
* Provide janky way of getting the service host channel from a spawned task
* Provide basic service discovery, entirely in userspace
* Move existing userspace tasks over to use new mechanism

Some improvements need to be made to make this more robust, but this does
boot the existing userspace successfully.

--- a/user/usb_bus_ehci/Cargo.toml
+++ b/user/usb_bus_ehci/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 std = { path = "../../lib/std", features = ["ddk"] }
 log = "0.4"
+service_host = { path = "../service_host" }
 platform_bus = { path = "../platform_bus" }
 ptah = { path = "../../lib/ptah" }
 bit_field = "0.10"
