--- a/user/fb_console/Cargo.toml
+++ b/user/fb_console/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 std = { path = "../../lib/std", features = ["async"] }
 log = "0.4"
+service_host = { path = "../service_host" }
 gfxconsole = { path = "../../lib/gfxconsole" }
 ptah = { path = "../../lib/ptah" }
 platform_bus = { path = "../platform_bus" }
