--- a/user/platform_bus/Cargo.toml
+++ b/user/platform_bus/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 
 [dependencies]
 std = { path = "../../lib/std", features = ["async", "ddk"] }
+service_host = { path = "../service_host" }
 log = "0.4"
 ptah = { path = "../../lib/ptah" }
 spinning_top = "0.3.0"
