--- a/user/virtio_gpu/Cargo.toml
+++ b/user/virtio_gpu/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 std = { path = "../../lib/std", features = ["ddk"] }
 log = "0.4"
+service_host = { path = "../service_host" }
 platform_bus = { path = "../platform_bus" }
 bit_field = "0.10"
 virtio = { path = "../../lib/virtio" }
